--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <name>Infinispan Tutorial: Simple tutorials</name>
 
     <properties>
-       <version.infinispan>9.0.1.Final</version.infinispan>
+       <version.infinispan>9.1.0-SNAPSHOT</version.infinispan>
     </properties>
 
     <dependencyManagement>
@@ -72,6 +72,7 @@
        <module>listen</module>
        <module>remote-listen</module>
        <module>kubernetes</module>
+       <module>hibernate-cache-local</module>
     </modules>
 </project>
 
