--- a/hibernate-cache-local/pom.xml
+++ b/hibernate-cache-local/pom.xml
@@ -14,6 +14,7 @@
    <properties>
       <version.hibernate-core>5.2.7.Final</version.hibernate-core>
       <version.h2>1.3.176</version.h2>
+      <version.log4j>2.8.1</version.log4j>
    </properties>
 
    <build>
@@ -58,6 +59,11 @@
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>${version.h2}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.logging.log4j</groupId>
+         <artifactId>log4j-core</artifactId>
+         <version>${version.log4j}</version>
       </dependency>
    </dependencies>
 </project>
